testdata/baselines/reference/submodule/conformance/nodeModulesAtTypesPriority.errors.txt
/packages/a/node_modules/react/index.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
/packages/a/node_modules/redux/index.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== /node_modules/@types/react/index.d.ts (0 errors) ====
    declare const React: any;
    export = React;
    
==== /node_modules/@types/redux/index.d.ts (0 errors) ====
    export declare function createStore(): void;
    
==== /packages/a/node_modules/react/index.js (1 errors) ====
    module.exports = {};
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== /packages/a/node_modules/redux/index.d.ts (0 errors) ====
    export declare function createStore(): void;
    
==== /packages/a/node_modules/redux/index.js (1 errors) ====
    module.exports = {};
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== /packages/a/index.ts (0 errors) ====
    import React from "react";
    import { createStore } from "redux";
    